# SeekTalent

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  DESIGN.md  IMPLEMENTATION_OWNERS.md  LAYERING_ANALYSIS.md  NEXT_PHASE_EXECUTION_PLAN.md  OPC会议备忘录.md  PRODUCT.md  README.md  README.zh-CN.md  RUNTIME_PHASED_SEARCH_DESIGN.md  TODOS.md  domi-seektalent-local-api-contract.md  pyproject.toml  seektalent_setup_prototype.html  tach.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
conversational-agent-runtime-goal-pack/: 00-codex-goal.md  00-index.md  01-shared-product-and-architecture.md  02-agent-tool-and-requirement-contracts.md  03-runtime-control-state-and-events.md  04-operating-policies-and-runtime-contracts.md  05-sqlite-event-log-and-projection-contract.md  MANIFEST.md  README.md
docs/: README.md  architecture-dependencies.md  architecture.md  cli.md  cli.zh-CN.md  configuration.md  data-flow.md  development.md  llm-context-composition.zh-CN.md  outputs.md  source-contracts.md  ui.md
examples/: jd.md  notes.md
experiments/: __init__.py  baseline_evaluation.py  baseline_wandb.py
local-codex-intake-harness/: 00-codex-goal.md  00-index.md  01-product-goal.md  02-boundaries.md  03-system-architecture.md  04-codex-harness-and-memory.md  05-model-provider-config.md  06-intake-conversation-contract.md  07-workbench-integration-contract.md  08-frontend-ux.md  09-data-storage-and-migrations.md  10-acceptance-criteria.md  11-implementation-plan.md  13-execution-control.md  MANIFEST.md  README.md
scripts/: build_offline_macos_intel.py  build_packaged_workbench.py  install-seektalent-domi.ps1  install-seektalent-domi.sh  install-seektalent-staging.sh  install_staging_browser_bridge.py  run_seektalent_staging.py  smoke-domi-runtime.sh  start-dev-workbench.sh  start-domi-workbench.sh  start-lan-workbench.sh  test-fast.sh  verify-dev-workbench.sh  verify-red-zone.sh  verify-source-decoupling.sh
(+1818 files in other folders)
